<resources>
    <string name="app_name">KanACLogger</string>
    <string name="action_settings">Settings</string>
    <string name="tab_construction">Construction</string>
    <string name="tab_drop">Drop</string>
    <string name="tab_manual">Exchange</string>
    <string name="tab_list">List</string>
    <string name="text_fuel">Fuel</string>
    <string name="text_bullet">Bullet</string>
    <string name="text_steel">Steel</string>
    <string name="text_bauxite">Bauxite</string>
    <string name="text_construction_resources">Resources</string>
    <string name="text_construction_result">Result</string>
    <string name="text_add">Add</string>
    <string name="text_ship_type">ShipType</string>
    <string name="text_ship_name">Name</string>
    <string name="text_ship_remodel">Remodeled</string>
    <string name="text_card_type">Rank</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_invalid_resource">Invalid quantity</string>
    <string name="text_drop_map_field">Battle area</string>
    <string name="text_map_field">Sea area</string>
    <string name="text_battle_type">Battle type</string>
    <string name="msg_add_construction_success">New contsruction is successfully added.</string>
    <string name="msg_add_construction_failed">Failed to add new construction.</string>
    <string name="msg_add_drop_success">New drop is successfully added.</string>
    <string name="msg_add_drop_failed">Failed to add new drop.</string>
    <string name="text_add_construction">Add construction</string>
    <string name="text_add_drop">Add drop</string>
    <string name="text_add_save">Save</string>
    <string name="msg_bulk_insert_success">Bulk insert success.</string>
    <string name="msg_bulk_insert_failed">Bulk insert failed.</string>
    <string name="tab_bulk">Bulk register</string>
    <string name="text_pref_cat_external">External Cooperation</string>
    <string name="text_pref_cat_other">Other</string>
    <string name="text_pref_twitter_coop">Twitter cooperation</string>
    <string name="text_pref_twitter_tweet_enable">Enable tweet</string>
    <string name="text_pref_twitter_tweet_enable_sum">Tweet every bulk insert</string>
    <string name="text_pref_twitter_hashtag_text">Hashtag text</string>
    <string name="text_pref_twitter_hashtag_enable">Enable hashtag</string>
    <string name="text_pref_twitter_hashtag_text_dialog">Input hashtag(max 10 characters)</string>
    <string name="text_pref_twitter_acount">Twitter account</string>
    <string name="text_pref_twitter_account_unregistered">unregistered</string>
    <string name="text_pref_twitter_account_registered">registered</string>
    <string name="msg_twitter_oauth_success">Twitter authentication success.</string>
    <string name="msg_twitter_oauth_failed">Twitter authentication failed.</string>
    <string name="msg_twitter_oauth_url_failed">Obtaining Twitter authentication URL failed</string>
    <string name="msg_twitter_tweet_success">Success to tweet.</string>
    <string name="msg_twitter_tweet_failed">Failed to tweet.</string>
    <string name="path_license" translatable="false">file:///android_asset/licenses.html</string>
    <string name="text_license">License</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
