<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".presenter.AddShipConstructionDialog">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_construction_resources" />

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_fuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_widthPercent="50%">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_fuel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"
                    android:ems="3"
                    android:inputType="number"
                    android:maxLength="3"
                    android:digits="0123456789"
                    android:hint="@string/text_fuel" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_steel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_toEndOf="@id/til_fuel"
                app:layout_widthPercent="50%">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_steel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"
                    android:ems="3"
                    android:inputType="number"
                    android:maxLength="3"
                    android:digits="0123456789"
                    android:hint="@string/text_steel" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_bullet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_widthPercent="50%"
                android:layout_below="@id/til_fuel">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_bullet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"
                    android:ems="3"
                    android:inputType="number"
                    android:maxLength="3"
                    android:digits="0123456789"
                    android:hint="@string/text_bullet" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_bauxite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_widthPercent="50%"
                android:layout_toEndOf="@id/til_bullet"
                android:layout_below="@id/til_steel">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_bauxite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:textSize="30sp"
                    android:ems="3"
                    android:inputType="number"
                    android:maxLength="3"
                    android:digits="0123456789"
                    android:hint="@string/text_bauxite" />
            </android.support.design.widget.TextInputLayout>
        </android.support.percent.PercentRelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_construction_result" />

        <include layout="@layout/view_select_ship"/>
    </LinearLayout>

</LinearLayout>
