<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presenter.AddConstructionDialog">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_drop_map_field" />

                <android.support.percent.PercentRelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnCount="2"
                    android:rowCount="2"
                    android:layout_marginStart="10dp"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/text_map_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_map_field"
                        app:layout_widthPercent="30%" />

                    <Spinner
                        android:id="@+id/spinner_map_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_widthPercent="70%"
                        android:layout_toEndOf="@id/text_map_field"
                        android:layout_alignBaseline="@id/text_map_field"
                        android:padding="5dp"/>

                    <TextView
                        android:id="@+id/text_battle_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_battle_type"
                        app:layout_widthPercent="30%"
                        android:layout_below="@id/text_map_field"
                        android:layout_marginTop="10dp"/>

                    <Spinner
                        android:id="@+id/spinner_battle_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_widthPercent="70%"
                        android:layout_below="@id/text_map_field"
                        android:layout_toEndOf="@id/text_battle_type"
                        android:layout_alignBaseline="@id/text_battle_type"
                        android:padding="5dp"/>
                </android.support.percent.PercentRelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_construction_result" />

                <include layout="@layout/view_select_ship"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</layout>
